2006-09-17  Matt Rice <ratmice@yahoo.com>

	* Source/NSDocument.m (-initWithContentsOfFile:ofType:): Set the
	file name and type before attempting to read the document.

2006-09-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-_isCellEditableColumn:row:): Correced
	error in last patch, pointed out by David Ayers <ayers@fsfe.org>. 

2006-09-17  Fred Kiefer <FredKiefer@gmx.de>

	* Images/GSSearch.tiff,
	* Images/GSStop.tiff: New icons for the NSSearchButtonCell by 
	Nikolaus Schaller <hns@computer.org>.

2006-09-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m: Changed _isCellEditable into a method
	[_isCellEditableColumn:row:] and use this everywhere. Have this new
	method check, if the table column is editable and only when not ask
	the delegate wether the cell should be editable. The matches the Cocoa
	behaviour as reported by Quentin Mathe <qmathe@club-internet.fr>. 
	* Source/NSTableView.m (-editColumn:row:withEvent:select:): Allow
	selection of cell, even when the data source is not editable. 
	* Source/NSTableView.m (-mouseDown:): Abort editing.
	* Source/NSOutlineView.m (-editColumn:row:withEvent:select:):
	Similar changes to super class, plus some code reordering and correction.
	
2006-09-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSColor.m: Fix memory leak (bug #17769)

2006-09-13 00:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDrawer.h: Added ivars to support implementation.
	* Source/GSNibCompatibility.m: Moved comments to top, for gcc < 3.0
	compilation.
	* Source/NSDrawer.m: Added GSDrawerWindow implementation and
	implementation of some methods in NSDrawer to interact with the 
	window.

2006-09-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSWindowDecorationView.m: Simplify/rewrite to have the view
	always match the window frame so that the window base coordinate
	system has its origin at the bottom left corner of the window frame.